cmake_minimum_required(VERSION 3.28)
project(linked_hashmap)

set(CMAKE_CXX_STANDARD 20)

add_executable(linked_hashmap
        exceptions.hpp
        utility.hpp
        linked_hashmap.hpp
#        1.cpp
#        3.cpp
#        5.cpp
#        7.cpp
#        9.cpp
#        11.cpp
        main.cpp
)
