cmake_minimum_required(VERSION 3.28)
project(map)

set(CMAKE_CXX_STANDARD 20)

add_executable(map
        map.hpp
        utility.hpp
        exceptions.hpp
        class-integer.hpp
        class-bint.hpp
        class-matrix.hpp
        src.hpp
#        code1.cpp
#        code2.cpp
#        code3.cpp
#        code4.cpp
#        code5.cpp
#        1.cpp
#        2.cpp
#        3.cpp
)
