cmake_minimum_required(VERSION 3.28)
project(priority_queue)

set(CMAKE_CXX_STANDARD 20)

add_executable(priority_queue
        exceptions.hpp
        utility.hpp
        priority_queue.hpp
#        code.cpp
#        code1.cpp
#        code2.cpp
#        code3.cpp
#        code4.cpp
#        code5.cpp
        code6.cpp
)
