cmake_minimum_required(VERSION 3.28)
project(vector)

set(CMAKE_CXX_STANDARD 20)

add_executable(vector
                vector.hpp
                exceptions.hpp
                utility.hpp
                class-bint.hpp
                class-integer.hpp
                class-matrix.hpp
#                code1.cpp
#                code2.cpp
#                code3.cpp
#                code4.cpp
#                code5.cpp
#                code6.cpp
                code7.cpp
                )
